--- a/.gitignore
+++ b/.gitignore
@@ -89,13 +89,10 @@ profile_default/
 ipython_config.py
 
 # pyenv
-<<<<<<< HEAD
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
-=======
 .python-version
->>>>>>> 4bfd82cadff83f16547a555fffce55b19c067c96
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -149,3 +146,5 @@ cython_debug/
 
 # Project-specific
 output/*
+
+.vscode/
