--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+attrs==21.4.0
 beautifulsoup4==4.10.0
+black==22.3.0
 certifi==2021.5.30
 charset-normalizer==2.0.5
+click==8.1.2
 idna==3.2
+iniconfig==1.1.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.8
+pytest==7.1.1
 python-dateutil==2.8.2
 requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
+tomli==2.0.1
+typing-extensions==4.2.0
 ultimate-sitemap-parser==0.5
 urllib3==1.26.6
