--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,33 @@
+appdirs==1.4.4
 attrs==21.4.0
-beautifulsoup4==4.10.0
-black==22.3.0
-certifi==2021.5.30
-charset-normalizer==2.0.5
-click==8.1.2
-idna==3.2
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+cssselect==1.1.0
+fake-useragent==0.1.11
+idna==3.3
+importlib-metadata==4.11.3
 iniconfig==1.1.1
-mypy-extensions==0.4.3
+lxml==4.8.0
 packaging==21.3
-pathspec==0.9.0
-platformdirs==2.5.2
+parse==1.19.0
 pluggy==1.0.0
 py==1.11.0
+pyee==8.2.2
 pyparsing==3.0.8
-pytest==7.1.1
+pyppeteer==1.0.2
+pyquery==1.4.3
+pytest==7.1.2
 python-dateutil==2.8.2
-requests==2.26.0
+requests==2.27.1
+requests-html==0.10.0
 six==1.16.0
-soupsieve==2.2.1
+soupsieve==2.3.2.post1
 tomli==2.0.1
-typing-extensions==4.2.0
+tqdm==4.64.0
 ultimate-sitemap-parser==0.5
-urllib3==1.26.6
+urllib3==1.26.9
+w3lib==1.22.0
+websockets==10.3
+zipp==3.8.0
