--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
 appdirs==1.4.4
 attrs==21.4.0
 beautifulsoup4==4.11.1
+black==22.3.0
 bs4==0.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+click==8.1.3
 cssselect==1.1.0
 fake-useragent==0.1.11
+Flask==2.1.2
 idna==3.3
 importlib-metadata==4.11.3
 iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lxml==4.8.0
+MarkupSafe==2.1.1
+mypy-extensions==0.4.3
 packaging==21.3
 parse==1.19.0
+pathspec==0.9.0
+platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
 pyee==8.2.2
@@ -26,8 +35,10 @@ six==1.16.0
 soupsieve==2.3.2.post1
 tomli==2.0.1
 tqdm==4.64.0
+typing-extensions==4.2.0
 ultimate-sitemap-parser==0.5
 urllib3==1.26.9
 w3lib==1.22.0
 websockets==10.3
+Werkzeug==2.1.2
 zipp==3.8.0
