--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,25 +2,21 @@ version: "3.8"
 
 services:
   app:
-    container_name: app
-    build: ./
-    command: python application.py run
-    volumes:
-      - ./:/project/
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    command: gunicorn --bind 0.0.0.0:5000 application:app
     ports:
       - 5000:5000
     env_file:
       - ./.env
-    depends_on:
-      - redis
   redis:
-    container_name: redis
     image: redis:6.2-alpine
     ports:
       - 6379:6379
     command: redis-server --save 20 1 --loglevel warning
     volumes:
       - redis:/data
+    env_file:
+      - ./.env
 volumes:
-  redis:
-    driver: local
