stashed docker in favor of bash script because using render for deployment

--- a/misc/Dockerfile
+++ b/misc/Dockerfile
@@ -5,6 +5,9 @@
 
 FROM python:3.8.3
 
+ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE 1
+
 # We don't want to run our application as root if it is not strictly necessary, even in a container.
 # Create a user and a group called 'app' to run the processes.
 # A system user is sufficient and we do not need a home.
