--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ cssselect==1.1.0
 Deprecated==1.2.13
 fake-useragent==0.1.11
 Flask==2.1.2
+flower==1.0.0
+gunicorn==20.1.0
+humanize==4.1.0
 idna==3.3
 importlib-metadata==4.11.3
 iniconfig==1.1.1
@@ -31,6 +34,7 @@ parse==1.19.0
 pathspec==0.9.0
 platformdirs==2.5.2
 pluggy==1.0.0
+prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 py==1.11.0
 pyee==8.2.2
@@ -47,6 +51,7 @@ requests-html==0.10.0
 six==1.16.0
 soupsieve==2.3.2.post1
 tomli==2.0.1
+tornado==6.1
 tqdm==4.64.0
 typing-extensions==4.2.0
 ultimate-sitemap-parser==0.5
