--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ jmespath==1.0.0
 kombu==5.2.4
 lxml==4.8.0
 MarkupSafe==2.1.1
+marshmallow==3.15.0
+marshmallow-sqlalchemy==0.28.0
 mypy-extensions==0.4.3
 packaging==21.3
 parse==1.19.0
@@ -52,15 +54,18 @@ pyquery==1.4.3
 pytest==7.1.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+python-http-client==3.3.7
 pytz==2022.1
 PyYAML==6.0
 redis==4.2.2
 requests==2.27.1
 requests-html==0.10.0
 s3transfer==0.5.2
+sendgrid==6.9.7
 six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.36
+starkbank-ecdsa==2.0.3
 tomli==2.0.1
 tornado==6.1
 tqdm==4.64.0
