FlaskWTF, size and extension validation on files

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ fake-useragent==0.1.11
 filedepot==0.8.0
 Flask==2.1.2
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
 flower==1.0.0
 gunicorn==20.1.0
 humanize==4.1.0
@@ -80,4 +81,5 @@ wcwidth==0.2.5
 websockets==10.3
 Werkzeug==2.1.2
 wrapt==1.14.1
+WTForms==3.0.1
 zipp==3.8.0
