--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ botocore==1.25.9
 bs4==0.0.1
 celery==5.2.6
 certifi==2021.10.8
+chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 click-didyoumean==0.3.0
