--- a/.dockerignore
+++ b/.dockerignore
@@ -147,5 +147,27 @@ output/
 *.db
 /logs
 
-tmp/
-misc/
+tmp
+misc
+venv
+
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
