--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,48 +6,42 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
-    command: flask run
+    command: gunicorn --worker-tmp-dir /dev/shm --workers=2 --threads=4 --worker-class=gthread --bind 0.0.0.0:5050 "application:create_app()"
     # gunicorn to place heartbeat file in a memory-only part of the fs ie. dev/shm because tmpfs doesn't exist in docker by default
-    image: sitemap_detective
+    image: sitemap-detective
     # this volume is used to map the files and folders on the host to the container
     # so if we change code on the host, code in the docker container will also be changed
-    volumes:
-      - ./:/project/
     ports:
       - 5050:5050
     env_file:
-      - dev.env
+      - ./prod.env
+    platform: linux/amd64 # need to specify otherwise google chrome download fails bc m1 runs arm64
     depends_on:
       - redis
-    platform: linux/amd64 # need to specify otherwise google chrome download fails bc m1 runs arm64
 
   worker:
     container_name: worker
     # Reuses the image built in the app container
-    image: sitemap_detective
-    command: watchmedo auto-restart -d 'app/' -p '*.py' -- celery -A celery_worker.celery worker --loglevel=info --logfile=logs/celery.log
-    volumes:
-      - ./:/project/
+    image: sitemap-detective
+    command: celery -A celery_worker.celery worker --loglevel=info --logfile=logs/celery.log
     env_file:
-      - dev.env
+      - ./prod.env
+    platform: linux/amd64
     depends_on:
       - redis
-    platform: linux/amd64
 
   flower:
     container_name: flower
-    image: sitemap_detective
-    command: watchmedo auto-restart -d 'app/' -p '*.py' -- celery --app celery_worker.celery flower --port=5555
-    volumes:
-      - ./:/project/
+    image: sitemap-detective
+    command: celery --app celery_worker.celery flower --port=5555
     env_file:
-      - dev.env
+      - ./prod.env
+    platform: linux/amd64
     ports:
       - 5555:5555
     depends_on:
       - redis
       - worker
-    platform: linux/amd64
 
   redis:
     container_name: redis
