--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: ./Dockerfile
     command: flask run
     # gunicorn to place heartbeat file in a memory-only part of the fs ie. dev/shm because tmpfs doesn't exist in docker by default
-    image: sitemap_detective
+    image: sitemap-detective
     # this volume is used to map the files and folders on the host to the container
     # so if we change code on the host, code in the docker container will also be changed
     volumes:
@@ -24,7 +24,7 @@ services:
   worker:
     container_name: worker
     # Reuses the image built in the app container
-    image: sitemap_detective
+    image: sitemap-detective
     command: watchmedo auto-restart -d 'app/' -p '*.py' -- celery -A celery_worker.celery worker --loglevel=info --logfile=logs/celery.log
     volumes:
       - ./:/project/
@@ -36,7 +36,7 @@ services:
 
   flower:
     container_name: flower
-    image: sitemap_detective
+    image: sitemap-detective
     command: watchmedo auto-restart -d 'app/' -p '*.py' -- celery --app celery_worker.celery flower --port=5555
     volumes:
       - ./:/project/
